# ceiot_proyecto_especializacion

./: README.md
code/: .gitignore
code/azure_fabric/: contracts.df  df-data-cleansing.json  nb-semantic_curation.ipynb  r1.pbix  readings.df  transactions.df
code/ethereum/: Dockerfile.dapp  docker-compose-holesky.yml
code/firmware/iot-robot/main/: CMakeLists.txt  display_task.c  display_task.h  joystick_task.c  main.c  measuring_task.c  measuring_task.h  motors_task.c  motors_task.h  mqtt_task.c  udp_server_task.c  udp_server_task.h  utils.c
docs/: .$IoTProject.drawio.bkp  .$IoTProject.drawio.dtmp  IoTProject.drawio
pocs/: .gitignore
pocs/poc-aws-app-runner/: docker-compose.yml  index.js
pocs/poc-aws-glue/: readings-sample-1738002614497.json  readings-schema-simple.json  readings-schema.json
pocs/poc-aws-setup/: Dockerfile  Readme.md  docker-compose-create.yml  docker-compose-destroy.yml  docker-compose.yml
pocs/poc-esp32-blink/: Dockerfile  docker-compose.yml
pocs/poc-esp32-mqtt-tls/: .gitignore  Dockerfile  crea_certs2.sh  docker-compose-client.yml  sdkconfig.bak  sdkconfig.new
pocs/poc-ethereum-hardhat/: Dockerfile  Readme.md
pocs/poc-ethereum-truffle/: Backend.md  Dockerfile  Dockerfile.truffle-deployer  README.md  Readme.md  dapp.Dockerfile  docker-compose-ganache.yml  docker-compose-holesky.yml  docker-compose-local.yml  docker-compose-sepolia.yml  docker-compose.yml  first-deployment-logs.txt  smart-contracts.Dockerfile
pocs/poc-ethereum-truffle-ganache/: docker-compose.yml
pocs/poc-hyperledger-fabric/: Readme.md  docker-compose.yml
(+103 files in other folders)
