idf_component_register(SRCS "main.c"
    "measuring_services.c" 
    "motors_service.c" 
    "joystick_service.c" 
    "robot_position_state.c" 
    "measuring_state.c" 
    "adc_service.c" 
    "display_service.c" 
    "wifi_service.c" 
    "mqtt_task.c" 
    "measuring_task.c"
    "udp_server_task.c"
    "motors_task.c"
    "utils.c"
    INCLUDE_DIRS ".")
